2023-05-14  Niels Möller  <nisse@lysator.liu.se>

	* Released nettle-3.9.

2023-05-12  Niels Möller  <nisse@lysator.liu.se>

	* texinfo.tex: Delete unused file.

	Copy files from https://git.savannah.gnu.org/cgit/gnulib.git/plain/build-aux/
	* install-sh: Update to 2020-11-14.01 version.
	* config.guess: Update to 2023-01-01 version.
	* config.sub: Update to 2023-01-21 version.

2023-05-10  Niels Möller  <nisse@lysator.liu.se>

	Fix compile error in --disable-public-key configuration.
	* testsuite/sha1-test.c: Add missing include of sha1.h.
	* testsuite/sha256-test.c: Add missing include of sha2.h.

2023-05-07  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: Bump package version, to 3.9.
	(LIBNETTLE_MINOR): Bump minor number, to 8.7 (8.6 was used for
	Nettle-3.8.1).
	(LIBHOGWEED_MINOR): Bump minor number, to 6.7.

2023-04-25  Niels Möller  <nisse@lysator.liu.se>

	Rework tests of SIV message functions.
	* testsuite/siv-gcm-test.c (nettle_encrypt_message_func)
	(nettle_decrypt_message_func): Delete typedefs.
	(test_compare_results, test_cipher_siv_gcm): Delete functions.
	(test_siv_gcm_aes128, test_siv_gcm_aes256): Delete macros.
	(siv_gcm_aes128, siv_gcm_aes256): New algorithm structs.
	(test_main): Use test_aead_message.

	* testsuite/siv-cmac-test.c (nettle_encrypt_message_func)
	(nettle_decrypt_message_func): Delete typedefs.
	(test_compare_results, test_cipher_siv): Delete functions.
	(test_siv_aes128, test_siv_aes256): Delete macros.
	(siv_cmac_aes128, siv_cmac_aes256): New algorithm structs.
	(test_main): Use test_aead_message.

2023-04-24  Niels Möller  <nisse@lysator.liu.se>

	Rework tests of OCB message functions.
	* testsuite/testutils.c (test_aead_message): New function, for
	testing AEAD message functions.
	* testsuite/testutils.h (nettle_encrypt_message_func)
	(nettle_decrypt_message_func): New typedefs.
	(struct nettle_aead_message): New struct.
	* testsuite/ocb-test.c (nettle_encrypt_message_func)